# stock_analysis

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF_2026-07-18_REPOSITORY_SAFETY_CLOSURE.md  IMPROVEMENTS_SUMMARY.md  README.md  aiclaw.db  aiclaw.db-shm  aiclaw.db-wal  test_openai.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml  compliance.yml  coverage.yml  pr-template-lint.yml
.planning/2026-07-16-event-replay-safety-remediation/: findings.md  progress.md  task_plan.md
.planning/2026-07-16-historical-doc-code-audit/: audit_report.md  candidate_counts.tsv  code_manifest.tsv  code_scan.tsv  doc_manifest.tsv  findings.md  progress.md  task_plan.md
.planning/2026-07-16-quant-platform-assessment/: findings.md  progress.md  task_plan.md
.planning/2026-07-17-v18-chinese-consolidation/: findings.md  progress.md  task_plan.md
.superpowers/sdd/: base.txt  batch-1-brief.md  codex-fix-report.md  data-driven-fix-report.md  final-fix-report.md  final-review.md  progress.md  task-1-brief.md  task-1-fix-report.md  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-13-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md
benches/: intraday_tick.rs
config/: a_share_market_holidays.csv  announce_keywords.toml  chain.toml  chain_rules.toml  design_contracts.toml  exclusion.toml  monitor.toml  opportunity.toml  risk.toml  strategy.toml
data/: stock_analysis.db
deploy/: grafana_dashboard.json
docs/: DEVELOPMENT_WORKFLOW_RULES.md  ENGINEERING_RULES_V2.md  KNOWN_BUGS-2026-06-28.md  README.md  analysis-2026-06-29-project-audit.md  architecture_p0_risk_unification.md  business_rules.md  code_review_p0_risk_unification.md  crontab.example  p0-5-done.md  p0-5-plus-v2-done.md  p0-5-plus-v4-todo.md  project_plan_p0_risk_unification.md  review-output-diagnosis-codex.md  sina_baostock_integration.md  v11-grill-decisions.md  v11-p0-4-持仓决策台-完成-2026-07-03.md  v11-p0-5-plus-v3-收尾-2026-07-04.md  v11-p0-5-plus-候选筛选台-完成-2026-07-04.md  v12-模板验证-2026-07-05.md  v9.4-changelog-流程纪律与审计-2026-06-30.md  业务规则清单-registry.md
docs/architecture/: v12-e2e-real-push-2026-07-05.md  v12-monitor-test-2026-07-05.md  v12-mvp-progress.md  v12-mvp0-acceptance-2026-07-05.md  v12-push-uncertainty-notes.md
docs/audits/: 2026-07-21-verified-project-backlog.md
docs/handoffs/: HANDOFF_2026-07-22_MONITOR_AND_REMAINING_WORK.md
docs/integrations/: magic-market-data-rs-requirements.md  magic-tdx-stock-analysis.md
docs/operations/: broker-api-integration.md  v13-push-templates-deployment.md  v13-release-notes.md  v13.10.1-release-notes.md
docs/root-causes/: E-multi-agent-bypass-freshness.md  F-tool-silent-fallback.md  G-no-fast-fail.md  README.md
docs/v14.x/: b011-2026-07-11-review-v14.2-live-integration-audit.md  b012-2026-07-12-fix-b011-live-integration.md  b012-review-findings.json  b013-2026-07-12-fix-b012-review.md
docs/v15.x/: dead-pushkinds.md  post-mortem-v15.1.1.md  v15.3-phase-d-expansion.md
docs/v16.x/: README.md  v16.x-completion-audit-2026-07-19.md
docs/v17.x/: v17.1-r2-event-infrastructure.md  v17.3-migration-and-persistence.md  v17.4-news-and-review.md  v17.5-batch2-push-migration.md  v17.6-batch3-push-migration.md  v17.7-batch4-dead-code-cleanup.md  v17.8-final-batch-cleanup.md  v17.x-dev-plan-revised.md  v17.x-dev-plan.md  v17.x-known-bugs.md
docs/v18.x/: README.md  (+4 more)
migrations/v12-p1-account-mode/: down.sql  (+1 more)
reports/: backtest_report_20260305.md  macro_recommendations_20260305.md  sentiment_score_IC_IR_analysis-2026-06-29.md  stock_analysis_20260305.md
src/: analyzer.rs  broker.rs  calendar.rs  chart_generator.rs  chart_generator_old.rs  cli.rs  config.rs  database.rs  deep_analyzer.rs  enums.rs  errors.rs  gate_d_chain_analysis_regression.rs  gate_d_event_cli_regression.rs  gate_d_event_envelope_regression.rs  gate_d_score_breakdown_regression.rs  gate_d_veto_chain_regression.rs  gate_d_yahoo_regression.rs  http_client.rs  indicators.rs  lhb_analyzer.rs  lib.rs  main.rs  market_analyzer.rs  market_data.rs  models.rs  multi_factor_strategy.rs  notification.rs  pipeline.rs  schema.rs  search_service.rs  sharpe_calculator.rs  traits.rs  trend_analyzer.rs  types.rs  util.rs
tests/: baostock_provider_test.rs  bom_kb_tests.rs  chain_exclusive.rs  e2e_dedup.rs  e2e_prediction_verify.rs  event_extractor_tests.rs  fallback_post_close_test.rs  fallback_sina_test.rs  flash_filter.rs  holding_summary_tests.rs  launch_gate_tests.rs  market_event_tests.rs  monitor_help_isolation.rs  news_item_test.rs  north_flow_option_tests.rs  notification_channels_tests.rs  opportunity_e2e_tests.rs  position_tracker_tests.rs  ranking.rs  review_timeout_tests.rs  rule_filter_benchmark.rs  score_tests.rs  sina_news_provider_test.rs  sina_provider_test.rs  stock_code_map_test.rs  test_data_freshness_check.rs  test_design_contradiction.rs  test_fake_impl_check.rs  tool_binary_process_isolation.rs  v11_three_sources.rs  v12_p0_3_halt.rs  winrate_tests.rs
(+405 files in other folders)
