[package]
name = "stock_analysis"
version = "0.1.0"
edition = "2021"
default-run = "stock_analysis"

[lib]
name = "stock_analysis"
path = "src/lib.rs"

[[bin]]
name = "stock_analysis"
path = "src/main.rs"

[[bin]]
name = "lhb_query"
path = "src/bin/lhb_query.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full", "rt"] }
anyhow = "1.0.100"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
url = "2.5"
async-trait = "0.1"
once_cell = "1.19"
regex = "1.10"
lazy_static = "1.4"
diesel = { version = "2.3.5", features = ["sqlite", "r2d2", "chrono"] }
lettre = { version = "0.11.19", features = ["smtp-transport", "sendmail-transport", "builder", "tokio1-native-tls"] }
clap = { version = "4.5.54", features = ["derive"] }
rustdx-complete = "=1.0.0"
urlencoding = "2.1"
plotters = "0.3"
image = "0.25"
futures = "0.3"
