[package]
name = "stock_analysis"
version = "0.1.1"
edition = "2021"
default-run = "stock_analysis"

[lib]
name = "stock_analysis"
path = "src/lib.rs"

[[bin]]
name = "stock_analysis"
path = "src/main.rs"

[[bin]]
name = "lhb_query"
path = "src/bin/lhb_query.rs"

[[bin]]
name = "rsi_optimize"
path = "src/bin/rsi_optimize.rs"

[[bin]]
name = "winrate_simulator"
path = "src/bin/winrate_simulator.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full", "rt"] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"  # 修复 P1-1: event_id 用 sha256
md-5 = "0.10" # v14.1: CLS 签名 MD5
sha1 = "0.10" # v14.1: CLS 签名 SHA1
serde_urlencoded = "0.7" # v14.1: CLS 签名 querystring 编码
hex = "0.4"     # 修复 P1-1: event_id hex 编码
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13" # v16.6 #2: 监控 metrics 暴露 :9090/metrics
log = "0.4"
env_logger = "0.11"
url = "2.5"
async-trait = "0.1"
once_cell = "1.19"
regex = "1.10"
lazy_static = "1.4"
diesel = { version = "2.3.5", features = ["sqlite", "r2d2", "chrono"] }
rusqlite = { version = "0.31", features = ["chrono"] }
lettre = { version = "0.11.19", features = ["smtp-transport", "sendmail-transport", "builder", "tokio1-native-tls"] }
clap = { version = "4.5.54", features = ["derive"] }
rustdx-complete = "=1.0.0"
urlencoding = "2.1"
encoding_rs = "0.8"
plotters = "0.3"
image = "0.25"
futures = "0.3"
polars = { version = "0.46", features = ["lazy", "round_series", "cum_agg", "rolling_window"] }
thiserror = "2.0.18"
async-openai = "0.19.0"
toml = "0.8"
arc-swap = "1.9.2"
dashmap = "6.2.1"
aho-corasick = "1.1.4"
# CR-AUTH: CLI operator 密码认证
rpassword = "7"        # 隐藏式密码输入
whoami = "1"          # 当前 Unix 用户 fallback
zeroize = "1"         # 密码 buffer 擦除

[target.'cfg(unix)'.dependencies]
pam = "0.7"           # PAM 跨平台认证 (Linux/macOS, 用 0.7 因 0.8 与 rustc 1.97+ 编译失败)
flate2 = "1"  # Task 13: Baostock TCP 协议 msg_type="96" 解压 (C1 fix)

# qmt-parser 0.2.1 — GPL-3.0 license, 项目自用 (不分发).
# 计划在后续 Task (QMT 本地缓存集成) 接入 fallback priority 0.
# 本 task (stock_code_map) 不直接使用此 dep, 仅为后续预备.
# 注意: crates.io 暂未发现此 crate, 实际接入时可能需要 git/path 依赖.
qmt-parser = "=0.2.1"

# v20.2: race condition 彻底解决 (test_design_contradiction 跨 test binary 文件 race)
# serial_test 0.10+ 用 process-wide mutex (std Mutex 跨 test binary 不可见)
[dev-dependencies]
serial_test = "0.10"
criterion = { version = "0.5", features = ["html_reports"] } # v16.8 #1: benchmark 套件
